build desing for container such as scrollbar, fixed debug of right and left buttons.

--- a/src/input.css
+++ b/src/input.css
@@ -9,3 +9,6 @@ body{
     overflow-x: hidden;
 }
 
+.no-scrollbar::-webkit-scrollbar {
+    display: none; 
+  }
